--- a/index.html
+++ b/index.html
@@ -587,15 +587,15 @@
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-user-graduate"></i>
-              Bachelors degree (Bpolsci) <span class="school">University of Pretoria</span>
+              Bachelors degree (Bpolsci) <span class="school"><a href="https://www.up.ac.za/" target="_blank">University of Pretoria</a></span>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-graduation-cap"></i>
-              A-Levels  <span class="school">International School of South Africa</span>
+              A-Levels  <span class="school"><a href="https://www.issa.co.za/" target="_blank">International School of South Africa</a></span>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-headset"></i>
-              Customer Care agent <span class="school">Compensation Fund [Dept of Labour]</span>
+              Customer Care agent <span class="school"><a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Compensation Fund [Dept of Labour]</a></span>
             </p>
 
             <p class="about-body io-item" id="about-body">
