--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
       <a class="skip-link" href="#main">skip to main content</a>
@@ -475,6 +475,20 @@
           <a class="view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
           <a class="view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
         </div>
+        <!-- HLAVUTELO -->
+        <div data-scroll class="work-item">
+          <div class="work-title">
+            <h2>hlavutelo Trading & projects&trade;</h2>
+            <p><a href="https://hlavutelotrading.co.za/" target="_blank">www.hlavutelotrading.co.za</a></p>
+          </div>
+          <figure>
+            <a href="https://hlavutelotrading.co.za/" target="_blank" title="Github Repository">
+            <img src="img/hlavutelo-logo.png" alt="Hlavutelo Trading & Projects">
+          </a>
+          </figure>
+          <a class="view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website</a>
+          <a class="view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
+        </div>
         <!-- kSAUCE -->
         <div data-scroll class="work-item ksauce">
           <div class="work-title">
@@ -531,17 +545,6 @@
           <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
           <a class="view-repo-btn" href="https://github.com/ShakexSempe/thato-tech-drawings" target="_blank">view repository</a>
         </div>
-        <!-- WORDPRESS -->
-        <!-- <div data-scroll class="work-item">
-          <div class="work-title">
-            <h2 class="work-title">WordPress</h2>
-            <p>WordPress e-commerce website</p>
-          </div>
-          <figure>
-            <img src="img/shakexsempe-logo.png" alt="Shakex Sempe WordPress logo">
-          </figure>
-          <a class="view-site-btn" href="https://www.shakex.co.za" target="_blank">view website</a>
-        </div> -->
       </div>
     </div>
   </section>
@@ -641,12 +644,6 @@
     </div>
   </section>
   <!--END OF ABOUT SECTION-->
-  <!-- PADDING SECTION -->
-  <!-- <div class="section-pad pad-me">
-    <figure data-scroll>
-      <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Sempe">
-    </figure>
-  </div> -->
   <!--  MENU -->
   <section id="menu">
     <!-- RESPONSIVE -->
