--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         <!-- HLAVUTELO -->
         <div data-scroll class="work-item">
           <div class="work-title">
-            <h2>hlavutelo Trading & projects&trade;</h2>
+            <h2>hlavutelo <br> Trading & projects&trade;</h2>
             <p><a href="https://hlavutelotrading.co.za/" target="_blank">www.hlavutelotrading.co.za</a></p>
           </div>
           <figure>
