--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <div data-scroll class="work-item">
           <div class="work-title">
             <h2>Orich Trading & projects&trade;</h2>
-            <p><a href="https://orichtrading.co.za">www.orichtrading.co.za</a></p>
+            <p><a href="https://orichtrading.co.za" target="_blank">www.orichtrading.co.za</a></p>
           </div>
           <figure>
             <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
