skils and cube position

--- a/index.html
+++ b/index.html
@@ -164,38 +164,13 @@
       <div class="slogan">
         <p>Front-end web developer : </p>
         <p>responsive, Immersive & Engaging</p>
-        <p><a href="#cube">websites & Landing pages</a></p>
+        <p><a href="#skills">websites & Landing pages</a></p>
       </div>
     </div>
   </section>
   <!-- END OF HERO-->
   
-  <!-- CUBE -->
-  <div id="cube" class="cube-container">
-    <div class="scene io-item">
-        <div class="floor"></div>
-        <div class="cube io-item">
-            <div class="front">
-              <a href="#skills">Immersive</a>
-            </div>
-            <div class="right">
-              <a href="#skills">Engaging</a>
-            </div>
-            <div class="back">
-              <a href="#skills">Responsive</a>
-            </div>
-            <div class="left">
-              <a href="#skills">Accessible</a>
-            </div>
-            
-            <div class="top">
-                <div class="ballShadow"></div>
-            </div>
-            <div class="bottom"></div>
-        </div>
-        <div class="ball io-item"></div>
-    </div>
-</div>
+  
   <!--  END OF MENU -->
   <main id="main">
   <!-- SKILLS SECTION-->
@@ -446,14 +421,40 @@
         </div>
       </div>
       <!-- skills img -->
-      <figure title="Responsive Web Design" data-scroll class="git-img">
+      <!-- <figure title="Responsive Web Design" data-scroll class="git-img">
         <img src="img/syntex-1.jpg" alt="responsive web design devices">
-      </figure>
+      </figure> -->
       <!-- end of skills img -->
     </div>
 
   </section>
   <!--END OF SKILLS SECTION-->
+  <!-- CUBE -->
+  <div id="cube" class="cube-container">
+    <div class="scene io-item">
+        <div class="floor"></div>
+        <div class="cube io-item">
+            <div class="front">
+              <a href="#work">Immersive</a>
+            </div>
+            <div class="right">
+              <a href="#work">Engaging</a>
+            </div>
+            <div class="back">
+              <a href="#work">Responsive</a>
+            </div>
+            <div class="left">
+              <a href="#work">Accessible</a>
+            </div>
+            
+            <div class="top">
+                <div class="ballShadow"></div>
+            </div>
+            <div class="bottom"></div>
+        </div>
+        <div class="ball io-item"></div>
+    </div>
+</div>
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
