footer & hero copy

--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@
         </a>
       </div>
       <div class="slogan">
-        <p>Front-end web developer : </p>
-        <p>responsive, Immersive & Engaging</p>
-        <p><a href="#skills">websites & Landing pages</a></p>
+        <p>Front-end web developer</p>
+        <p><a href="#main">websites & Landing pages</a></p>
       </div>
     </div>
   </section>
@@ -857,8 +856,8 @@
       <!-- end of contact form -->
 
       <div data-scroll class="bs21">
-        <p>copyright&copy; Boitumelo Sempe.</p>
-        <a title="Shakex Sempe" href="#about">shakex sempe</a>
+        <p>copyright&copy; Shakex Sempe</p>
+        <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box shadow</a>
         <span class="date"></span>
       </div>
     </div>
