--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
 
             </ul>
             <div class="contact-links">
-              <a title="Whatsapp number" href="tel:+27716876941"><i class="fa-brands fa-whatsapp"></i>+27716876941 (Whatsapp)</a>
               <a title="Email Address" href="mailto:bshakex@gmail.com"><i class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
+              <a title="Whatsapp number" href="tel:+27716876941"><i class="fa-brands fa-whatsapp"></i>+27716876941 (Whatsapp)</a>
               <a title="Phone number" href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
+              <a title="Phone number" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
             </div>
           </div>
         </div>
@@ -428,32 +429,15 @@
 
   </section>
   <!--END OF SKILLS SECTION-->
-  <!-- CUBE -->
-  <div id="cube" class="cube-container">
-    <div class="scene io-item">
-        <div class="floor"></div>
-        <div class="cube io-item">
-            <div class="front">
-              <a href="#work">Immersive</a>
-            </div>
-            <div class="right">
-              <a href="#work">Engaging</a>
-            </div>
-            <div class="back">
-              <a href="#work">Responsive</a>
-            </div>
-            <div class="left">
-              <a href="#work">Accessible</a>
-            </div>
-            
-            <div class="top">
-                <div class="ballShadow"></div>
-            </div>
-            <div class="bottom"></div>
-        </div>
-        <div class="ball io-item"></div>
-    </div>
-</div>
+  <!-- PADDING SECTION -->
+  <div id="projects-pad" class="section-pad pad-intro">
+    <figure data-scroll>
+      <a title="github contribution activity" href="#projects">
+        <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
+      </a>
+    </figure>
+  </div>
+
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
@@ -548,14 +532,32 @@
       </div>
     </div>
   </section>
-  <!-- PADDING SECTION -->
-  <div id="projects-pad" class="section-pad pad-intro">
-    <figure data-scroll>
-      <a title="github contribution activity" href="#projects">
-        <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
-      </a>
-    </figure>
-  </div>
+  <!-- CUBE -->
+  <div id="cube" class="cube-container">
+    <div class="scene io-item">
+        <div class="floor"></div>
+        <div class="cube io-item">
+            <div class="front">
+              <a href="#work">Immersive</a>
+            </div>
+            <div class="right">
+              <a href="#work">Engaging</a>
+            </div>
+            <div class="back">
+              <a href="#work">Responsive</a>
+            </div>
+            <div class="left">
+              <a href="#work">Accessible</a>
+            </div>
+            
+            <div class="top">
+                <div class="ballShadow"></div>
+            </div>
+            <div class="bottom"></div>
+        </div>
+        <div class="ball io-item"></div>
+    </div>
+</div>
   <!-- END OF PADDING SECTION -->
   <!--PROJECTS SECTION-->
   <section class="link-section" id="projects">
@@ -739,7 +741,7 @@
           <h2>Phone</h2>
           <div id="phone" class="contact-info">
             <p>+27 72 600 5104</p>
-            <a href="tel:+27716876941" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..whatsapp me</a>
+            <a href="tel:+27726005104" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
           </div>
         </article>
         <!-- WHATSAPP NUMBER -->
