--- a/index.html
+++ b/index.html
@@ -169,8 +169,6 @@
     </div>
   </section>
   <!-- END OF HERO-->
-  
-  
   <!--  END OF MENU -->
   <main id="main">
   <!-- SKILLS SECTION-->
@@ -473,20 +471,6 @@
           <a class="view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website</a>
           <a class="view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
         </div>
-        <!-- kSAUCE -->
-        <div data-scroll class="work-item ksauce">
-          <div class="work-title">
-            <h2>K'Sauce&trade;</h2>
-            <p>5 page Responsive Website</p>
-          </div>
-          <figure>
-            <a href="https://shakexsempe.github.io/kutlwano-hot-sauce/" target="_blank" title="Github Repository">
-              <img src="img/ksauce.jpg" alt="k'Sauce">
-            </a>
-          </figure>
-          <a class="view-site-btn" href="https://ksauce.netlify.app/" target="_blank">view website</a>
-          <a class="view-repo-btn" href="https://github.com/ShakexSempe/kutlwano-hot-sauce" target="_blank">view repository</a>
-        </div>
         <!-- MUNCH UP -->
         <div data-scroll class="work-item">
           <div class="work-title">
@@ -501,8 +485,22 @@
           <a class="view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
           <a class="view-repo-btn" href="https://github.com/ShakexSempe/munch-up" target="_blank">view repository</a>
         </div>
+        <!-- kSAUCE -->
+        <!-- <div data-scroll class="work-item ksauce">
+          <div class="work-title">
+            <h2>K'Sauce&trade;</h2>
+            <p>5 page Responsive Website</p>
+          </div>
+          <figure>
+            <a href="https://shakexsempe.github.io/kutlwano-hot-sauce/" target="_blank" title="Github Repository">
+              <img src="img/ksauce.jpg" alt="k'Sauce">
+            </a>
+          </figure>
+          <a class="view-site-btn" href="https://ksauce.netlify.app/" target="_blank">view website</a>
+          <a class="view-repo-btn" href="https://github.com/ShakexSempe/kutlwano-hot-sauce" target="_blank">view repository</a>
+        </div> -->
         <!-- MAGOVENI -->
-        <div data-scroll class="work-item">
+        <!-- <div data-scroll class="work-item">
           <div class="work-title">
             <h2 class="work-title">Magoveni Construction&trade;</h2>
             <p>One Page website</p>
@@ -514,9 +512,9 @@
           </figure>
           <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
           <a class="view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository</a>       
-        </div>
+        </div> -->
         <!-- THATO -->
-        <div data-scroll class="work-item">
+        <!-- <div data-scroll class="work-item">
           <div class="work-title">
             <h2 class="work-title">Thato Technical Drawings&copy;</h2>
             <p>One page landing page</p>
@@ -528,7 +526,7 @@
           </figure>
           <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
           <a class="view-repo-btn" href="https://github.com/ShakexSempe/thato-tech-drawings" target="_blank">view repository</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
