--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </h2>
 
         <h2 id="aka"><span>a.k.a</span></h2>
-        <a href="#cube" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
+        <a href="#main" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
