--- a/index.html
+++ b/index.html
@@ -556,20 +556,6 @@
         <div class="ball io-item"></div>
     </div>
 </div>
-  <!-- END OF PADDING SECTION -->
-  <!--PROJECTS SECTION-->
-  <section class="link-section" id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        <h1 title="repository links" data-text="portfolio" id="projects-h1" class="section-title">Port<span>f</span>olio
-        </h1>
-      </div>
-      <div data-scroll class="all-projects">
-        <!-- /PROJECTS.JS -->
-      </div>
-    </div>
-  </section>
-  <!-- END OF PROJECTS-->
   <!-- ABOUT SECTION-->
   <section class="link-section" id="about">
     <div id="about-target" class="about container">
@@ -643,6 +629,67 @@
       </div>
     </div>
   </section>
+  <!-- CONTACT SECTION-->
+  <section class="link-section" id="contact">
+    <div class="contact container">
+      <div class="contact-header">
+        <h1 title="contact information" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
+      </div>
+      <div class="contact-items">
+        <!-- EMAIL ITEM -->
+        <article title="Email Info" data-scroll class="contact-item">
+          <div class="icon">
+            <i class="fas fa-envelope"></i>
+          </div>
+          <h2>Email</h2>
+          <div class="contact-info">
+            <p>bshakex@gmail.com</p>
+            <a href="mailto:bshakex@gmail.com" title="Send Email to Shakex Sempe"><i class="fas fa-at"></i>
+              ..email me</a>
+          </div>
+        </article>
+        <!-- PHONE NUMBER -->
+        <article title="Phone Number" data-scroll class="contact-item">
+          <div class="icon">
+            <i class="fas fa-phone-alt"></i>
+          </div>
+          <h2>Phone</h2>
+          <div id="phone" class="contact-info">
+            <p>+27 72 600 5104</p>
+            <a href="tel:+27726005104" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
+          </div>
+        </article>
+        <!-- WHATSAPP NUMBER -->
+        <article title="WhatsApp Number" data-scroll class="contact-item">
+          <div class="icon">
+            <i class="fa-brands fa-whatsapp"></i>
+          </div>
+          <h2>WhatsApp</h2>
+          <div id="whatsapp" class="contact-info">
+            <p>+27716876941</p>
+            <a href="tel:+27716876941" title="Contact Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
+          </div>
+        </article>
+
+      </div>
+    </div>
+    
+    <!-- end of padding section -->
+  </section>
+  <!--PROJECTS SECTION-->
+  <section class="link-section" id="projects">
+    <div class="projects container">
+      <div class="projects-header">
+        <h1 title="repository links" data-text="portfolio" id="projects-h1" class="section-title">Port<span>f</span>olio
+        </h1>
+      </div>
+      <div data-scroll class="all-projects">
+        <!-- /PROJECTS.JS -->
+      </div>
+    </div>
+  </section>
+  <!-- END OF PROJECTS-->
+  
   <!--END OF ABOUT SECTION-->
   <!--  MENU -->
   <section id="menu">
@@ -706,67 +753,21 @@
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
           <a href="#" class="btn">view</a>
-          <a href="#contact" class="page-btn">next</a>
+          <a href="#footer-logo" class="page-btn">next</a>
         </div>
       </div>
     </div>
   </section>
-  <!-- CONTACT SECTION-->
-  <section class="link-section" id="contact">
 
-    <div class="contact container">
-      <div class="contact-header">
-        <h1 title="contact information" data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
-      </div>
-      <div class="contact-items">
-        <!-- EMAIL ITEM -->
-        <article title="Email Info" data-scroll class="contact-item">
-          <div class="icon">
-            <i class="fas fa-envelope"></i>
-          </div>
-          <h2>Email</h2>
-          <div class="contact-info">
-            <p>bshakex@gmail.com</p>
-            <a href="mailto:bshakex@gmail.com" title="Send Email to Shakex Sempe"><i class="fas fa-at"></i>
-              ..email me</a>
-          </div>
-        </article>
-        <!-- PHONE NUMBER -->
-        <article title="Phone Number" data-scroll class="contact-item">
-          <div class="icon">
-            <i class="fas fa-phone-alt"></i>
-          </div>
-          <h2>Phone</h2>
-          <div id="phone" class="contact-info">
-            <p>+27 72 600 5104</p>
-            <a href="tel:+27726005104" title="Contact Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
-          </div>
-        </article>
-        <!-- WHATSAPP NUMBER -->
-        <article title="WhatsApp Number" data-scroll class="contact-item">
-          <div class="icon">
-            <i class="fa-brands fa-whatsapp"></i>
-          </div>
-          <h2>WhatsApp</h2>
-          <div id="whatsapp" class="contact-info">
-            <p>+27716876941</p>
-            <a href="tel:+27716876941" title="Contact Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
-          </div>
-        </article>
-
-      </div>
-    </div>
-    <!-- padding section -->
-    <div id="footer-logo" class="section-pad pad-logo">
-      <figure data-scroll>
-        <a title="shakex sempe: web developer" href="#footer">
-          <img src="img/shakex-logo-min.png" loading="lazy" alt="Shakex Sempe logo">
-        </a>
-      </figure>
-    </div>
-    <!-- end of padding section -->
-  </section>
   <!--END OF CONTACT SECTION-->
+  <!-- padding section -->
+  <div id="footer-logo" class="section-pad pad-logo">
+    <figure data-scroll>
+      <a title="shakex sempe: web developer" href="#footer">
+        <img src="img/shakex-logo-min.png" loading="lazy" alt="Shakex Sempe logo">
+      </a>
+    </figure>
+  </div>
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer container">
