--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
       </div>
       <div id="hero-h1">
         <!-- <h1>my name is boitumelo sempe <span>aka</span></h1> -->
-        <h2>
+        <h1>
           <span style="--s:1">My</span>
           <span style="--s:2">Name</span>
           <span style="--s:3">Is</span>
-        </h2>
-        <h2>
+        </h1>
+        <h1>
           <span style="--s:4">Boitumelo</span>
           <span style="--s:5">Sempe</span>
-        </h2>
+        </h1>
 
-        <h2 id="aka"><span>a.k.a</span></h2>
+        <p id="aka"><span>a.k.a</span></p>
         <a href="#main" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
@@ -163,8 +163,7 @@
         </a>
       </div>
       <div class="slogan">
-        <p>Front-end web developer</p>
-        <p><a href="#main">websites & Landing pages</a></p>
+        <p><a href="#main">Front-end web developer</a></p>
       </div>
     </div>
   </section>
