cube pointer events

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
   <!-- PADDING SECTION -->
   <div id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
-      <a title="github contribution activity" href="#projects">
+      <a title="github contribution activity" href="#work">
         <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
       </a>
     </figure>
