--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
       <a class="skip-link" href="#main">skip to main content</a>
@@ -136,10 +136,9 @@
   <!--HERO-->
   <section id="home" class="section welcome-section">
     <div class="hero container">
-      <div class="hero-bg">
-        <!-- <img src="img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt=""> -->
+      <!-- <div class="hero-bg">
         <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" loading="lazy" alt="laptop">
-      </div>
+      </div> -->
       <div id="hero-h1">
         <!-- <h1>my name is boitumelo sempe <span>aka</span></h1> -->
         <h1>
