--- a/index.html
+++ b/index.html
@@ -529,32 +529,6 @@
       </div>
     </div>
   </section>
-  <!-- CUBE -->
-  <div id="cube" class="cube-container">
-    <div class="scene io-item">
-        <div class="floor"></div>
-        <div class="cube io-item">
-            <div class="front">
-              <a href="#work">Immersive</a>
-            </div>
-            <div class="right">
-              <a href="#work">Engaging</a>
-            </div>
-            <div class="back">
-              <a href="#work">Responsive</a>
-            </div>
-            <div class="left">
-              <a href="#work">Accessible</a>
-            </div>
-            
-            <div class="top">
-                <div class="ballShadow"></div>
-            </div>
-            <div class="bottom"></div>
-        </div>
-        <div class="ball io-item"></div>
-    </div>
-</div>
   <!-- ABOUT SECTION-->
   <section class="link-section" id="about">
     <div id="about-target" class="about container">
@@ -814,7 +788,7 @@
     <a href="#home"><i class="fas fa-house"></i>home</a>
   </figure>
   <figure class="link-item item-3">
-    <a href="#work"><i class="fa-regular fa-code"></i>work</a>
+    <a href="pages/work.html"><i class="fa-regular fa-code"></i>work</a>
   </figure>
 </div>
 <!-- PRELOADER SCRIPT -->
