--- a/pages/work.html
+++ b/pages/work.html
@@ -70,27 +70,9 @@
                         <ul class="links">
                             <!-- SKILLS LINK -->
                             <li>
-                                <i class="fas fa-lightbulb"></i>
-                                <a href="#skills" title="web development skills" data-after="skills"
-                                    class="scroll-link scroll-li">skills</a>
-                            </li>
-                            <!-- WORK[PROJECTS] LINK -->
-                            <li>
-                                <i class="fa-solid fa-earth-africa"></i>
-                                <a href="#work" title="github repositories" data-after="Projects"
-                                    class="scroll-link scroll-li">projects</a>
-                            </li>
-                            <!-- ABOUT LINK -->
-                            <li>
-                                <i class="fas fa-user-circle"></i>
-                                <a href="#about" title="about Boitumelo Sempe" data-after="About"
-                                    class="scroll-link scroll-li">about</a>
-                            </li>
-                            <!-- PROJECTS[PORTFOLIO] LINK -->
-                            <li>
-                                <i class="fab fa-github"></i>
-                                <a href="#projects" title="github repositories" data-after="portfolio"
-                                    class="scroll-link scroll-li">portfolio</a>
+                                <i class="fas fa-house"></i>
+                                <a href="../index.html" title="web development skills" data-after="home"
+                                    class="scroll-link scroll-li">home</a>
                             </li>
                             <!-- CONTACT LINK -->
                             <li>
@@ -98,15 +80,10 @@
                                 <a href="#contact" title="contact-info" data-after="Contact"
                                     class="scroll-link scroll-li">contact</a>
                             </li>
-                            <!-- SOCIALS -->
-                            <!-- <li>
-                <i class="fas fa-user-friends"></i>
-                <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
-              </li> -->
                             <!-- FORM -->
                             <li>
                                 <i class="fas fa-at"></i>
-                                <a href="forms/form.html" title="contact-form" data-after="form"
+                                <a href="../forms/form.html" title="contact-form" data-after="form"
                                     class="scroll-li">form</a>
                             </li>
 
@@ -168,7 +145,7 @@
     <main id="main">
 
         <!-- WORK / PORTFOLIO -->
-        <section id="work" class="link-section">
+        <section class="link-section">
             <div class="work">
                 <div class="work-header">
                     <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
@@ -294,6 +271,66 @@
                 <div class="ball io-item"></div>
             </div>
         </div>
+        <!-- WORK / PORTFOLIO -->
+        <section class="link-section">
+            <div class="work">
+                <div class="work-header">
+                    <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
+                </div>
+                <div class="work-items">
+                    <!-- kSAUCE -->
+                    <div data-scroll class="work-item ksauce">
+                        <div class="work-title">
+                            <h2>K'Sauce&trade;</h2>
+                            <p>5 page Responsive Website</p>
+                        </div>
+                        <figure>
+                            <a href="https://shakexsempe.github.io/kutlwano-hot-sauce/" target="_blank"
+                                title="Github Repository">
+                                <img src="../img/ksauce.jpg" alt="k'Sauce">
+                            </a>
+                        </figure>
+                        <a class="view-site-btn" href="https://ksauce.netlify.app/" target="_blank">view website</a>
+                        <a class="view-repo-btn" href="https://github.com/ShakexSempe/kutlwano-hot-sauce"
+                            target="_blank">view repository</a>
+                    </div>
+                    <!-- MAGOVENI -->
+                    <div data-scroll class="work-item">
+                        <div class="work-title">
+                            <h2 class="work-title">Magoveni Construction&trade;</h2>
+                            <p>One Page website</p>
+                        </div>
+                        <figure>
+                            <a href="https://shakexsempe.github.io/ngoveni-construction/" target="_blank"
+                                title="Github Repository">
+                                <img src="../img/mkansi-min.png" alt="Orich trading & projects">
+                            </a>
+                        </figure>
+                        <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view
+                            website</a>
+                        <a class="view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction"
+                            target="_blank">view repository</a>
+                    </div>
+                    <!-- THATO -->
+                    <div data-scroll class="work-item">
+                        <div class="work-title">
+                            <h2 class="work-title">Thato Technical Drawings&copy;</h2>
+                            <p>One page landing page</p>
+                        </div>
+                        <figure>
+                            <a href="https://shakexsempe.github.io/thato-tech-drawings/" target="_blank"
+                                title="Github Repository">
+                                <img src="../img/thato2-logo-min.png" alt="Orich trading & projects">
+                            </a>
+                        </figure>
+                        <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/"
+                            target="_blank">view website</a>
+                        <a class="view-repo-btn" href="https://github.com/ShakexSempe/thato-tech-drawings"
+                            target="_blank">view repository</a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- CONTACT SECTION-->
         <section class="link-section" id="contact">
             <div class="contact container">
@@ -470,14 +507,14 @@
     </main>
     <!-- BOTTOM NAVIGATION -->
     <div class="bottom-nav" id="bottom-nav">
-        <figure class="link-item item-1">
-            <a href="#about"><i class="fas fa-user"></i>about</a>
-        </figure>
         <figure class="link-item item-2">
             <a href="../index.html"><i class="fas fa-house"></i>home</a>
         </figure>
+        <figure class="link-item item-1">
+            <a href="#"><i class="fas fa-arrow-up"></i>top</a>
+        </figure>
         <figure class="link-item item-3">
-            <a href="#work"><i class="fa-regular fa-code"></i>work</a>
+            <a href="mailto:bshakex@gmail.com"><i class="fa-regular fa-envelope"></i>email</a>
         </figure>
     </div>
     <!-- PRELOADER SCRIPT -->
