--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header">
       <a class="skip-link" href="#main">skip to main content</a>
@@ -792,7 +792,7 @@
 <script>
   setTimeout(function () {
     $('.loader_bg').fadeToggle();
-  }, 8000);
+  }, 3000);
 </script>
 <!-- SCROLL SCRIPT -->
 <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
