--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
     <a href="#home"><i class="fas fa-house"></i>home</a>
   </figure>
   <figure class="link-item item-3">
-    <a href="pages/work.html"><i class="fa-regular fa-code"></i>work</a>
+    <a href="pages/work.html" target="_blank"><i class="fa-regular fa-code"></i>work</a>
   </figure>
 </div>
 <!-- PRELOADER SCRIPT -->
