--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
   <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-sempe-logo.png">
 
   <!-- TITLE -->
-  <title>Shakex Sempe - Front End Developer - Personal Portfolio Page</title>
+  <title>Web Developer - Front-End Web Design & Development || Personal Portfolio</title>
   <!--  -->
   <!-- META DESCRIPTION -->
   <meta name="description"
-    content="Boitumelo Shakex Sempe is a South Africa based front-end Web developer. 
-  This Personal Portfolio Page contains links to github repositories, information about web development skills, contact info , social media links and web development learning platform links">
+    content="South Africa based Web Design & Developer. I help businesses & professionals showcase their services, projects and products by coding responsive homepages, landing pages and basic websites">
   <!-- META KEYWORDS -->
   <meta name="keywords"
-    content="HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript, Responsive web design, remote, freelance">
+    content="Responsive web design, copywriting, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote, freelance">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
