--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
       <a class="skip-link" href="#main">skip to main content</a>
@@ -142,18 +142,8 @@
         <div class="slogan">
           <p><a href="#main">Front-end web developer</a></p>
         </div>
-        <!-- <h1>my name is boitumelo sempe <span>aka</span></h1> -->
-        <h1>
-          <span style="--s:1">My</span>
-          <span style="--s:2">Name</span>
-          <span style="--s:3">Is</span>
-        </h1>
-        <h1>
-          <span style="--s:4">Boitumelo</span>
-          <span style="--s:5">Sempe</span>
-        </h1>
-
-        <p id="aka"><span>a.k.a</span></p>
+        <h1>my name is <br>boitumelo sempe</h1>
+        <p id="aka">a.k.a</p>
         <a href="#main" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
