--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <!--HERO-->
   <section id="home" class="section welcome-section">
-    <div class="hero container">
+    <div class="hero">
       <!-- <div class="hero-bg">
         <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" loading="lazy" alt="laptop">
       </div> -->
