--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
       <!-- <div class="hero-bg">
         <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" loading="lazy" alt="laptop">
       </div> -->
-      <div id="hero-h1">
-        <div class="slogan">
-          <p><a href="#main">Front-end web developer</a></p>
+      <div id="hero-slogan">
+        <div class="hero-title">
+          <h1>
+            <a href="#main">Front-end web developer</a>
+            my name is <br>boitumelo sempe
+          </h1>
+          <p id="aka">a.k.a</p>
         </div>
-        <h1>my name is <br>boitumelo sempe</h1>
-        <p id="aka">a.k.a</p>
         <a href="#main" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
