--- a/pages/work.html
+++ b/pages/work.html
@@ -112,7 +112,7 @@
 
     <!--HERO-->
     <section id="home" class="section welcome-section">
-        <div class="hero container">
+        <div class="hero">
             <div id="hero-h1">
                 <div class="slogan">
                     <p><a href="#main">Front-end web developer</a></p>
