--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
       </div> -->
       <div id="hero-slogan">
         <div class="hero-title">
+          <p><a href="#main">Front-end web developer</a></p>
           <h1>
-            <a href="#main">Front-end web developer</a>
             my name is <br>boitumelo sempe
           </h1>
           <p id="aka">a.k.a</p>
