--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <!-- <div class="hero-bg">
         <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" loading="lazy" alt="laptop">
       </div> -->
-      <div id="hero-slogan">
+      <div id="hero-content">
         <div class="hero-title">
           <p><a href="#main">Front-end web developer</a></p>
           <h1>
