--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
             </ul>
             <div class="contact-links">
               <a title="Email Address" href="mailto:bshakex@gmail.com"><i class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
-              <a title="Whatsapp number" href="tel:+27716876941"><i class="fa-brands fa-whatsapp"></i>+27716876941 (Whatsapp)</a>
+              <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i class="fa-brands fa-whatsapp"></i>+27716876941 (Whatsapp)</a>
               <a title="Phone number" href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
-              <a title="Phone number" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
+              <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
             </div>
           </div>
         </div>
@@ -587,7 +587,7 @@
           <h3>WhatsApp</h3>
           <div id="whatsapp" class="contact-info">
             <p>+27716876941</p>
-            <a href="tel:+27716876941" title="Contact Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
+            <a href="https://wa.me/+27716876941" target="_blank" title="Contact Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
           </div>
         </article>
 
