--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
       <a class="skip-link" href="#main">skip to main content</a>
@@ -139,7 +139,7 @@
         <div class="hero-title">
           <p><a href="#main">Front-end web developer</a></p>
           <h1>
-            my name is <br>boitumelo sempe
+            my name is<br>boitumelo sempe
           </h1>
           <p id="aka">a.k.a</p>
         </div>
@@ -405,11 +405,6 @@
           </div>
         </div>
       </div>
-      <!-- skills img -->
-      <!-- <figure title="Responsive Web Design" data-scroll class="git-img">
-        <img src="img/syntex-1.jpg" alt="responsive web design devices">
-      </figure> -->
-      <!-- end of skills img -->
     </div>
 
   </section>
@@ -422,7 +417,6 @@
       </a>
     </figure>
   </div>
-
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
@@ -491,20 +485,23 @@
             </p>
             <p class="about-body io-item">
               <i class="fa-brands fa-free-code-camp"></i>
+              <span class="item-title">FreeCodeCamp</span><br>
               <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Responsive Web Design.</a>
-              <span class="school">FreeCodeCamp</span>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-user-graduate"></i>
-              Bachelors degree (Bpolsci) <span class="school"><a href="https://www.up.ac.za/" target="_blank">University of Pretoria</a></span>
+              <span class="item-title">University of pretoria</span><br>
+              <a href="https://www.up.ac.za/" target="_blank">Bachelors degree (Bpolsci)</a>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-graduation-cap"></i>
-              A-Levels  <span class="school"><a href="https://www.issa.co.za/" target="_blank">International School of South Africa</a></span>
+              <span class="item-title">International School of South Africa</span><br>
+              <a href="https://www.issa.co.za/" target="_blank">Cambridge International AS and A Levels</a>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-headset"></i>
-              Customer Care agent <span class="school"><a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Compensation Fund [Dept of Labour]</a></span>
+              <span class="item-title">Compensation Fund</span><br class="title-break"> <span class="item-title">[Department of Labour]</span><br>
+              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Customer Care agent</a>
             </p>
 
             <p class="about-body io-item" id="about-body">
