--- a/index.html
+++ b/index.html
@@ -485,23 +485,23 @@
             </p>
             <p class="about-body io-item">
               <i class="fa-brands fa-free-code-camp"></i>
-              <span class="item-title">FreeCodeCamp</span><br>
+              <span class="item-title">FreeCodeCamp</span>
               <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Responsive Web Design.</a>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-user-graduate"></i>
-              <span class="item-title">University of pretoria</span><br>
+              <span class="item-title">University of pretoria</span>
               <a href="https://www.up.ac.za/" target="_blank">Bachelors degree (Bpolsci)</a>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-graduation-cap"></i>
-              <span class="item-title">International School of South Africa</span><br>
+              <span class="item-title">International School of South Africa</span>
               <a href="https://www.issa.co.za/" target="_blank">Cambridge International AS and A Levels</a>
             </p>
             <p class="about-body io-item">
               <i class="fa-solid fa-headset"></i>
-              <span class="item-title">Compensation Fund</span><br class="title-break"> <span class="item-title">[Department of Labour]</span><br>
-              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Customer Care agent</a>
+              <span class="item-title">Compensation Fund - Dept of Labour</span>
+              <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Customer Care Agent</a>
             </p>
 
             <p class="about-body io-item" id="about-body">
