--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header">
       <a class="skip-link" href="#main">skip to main content</a>
@@ -605,14 +605,6 @@
       </div>
     </div>
   </section>
-  <!-- END OF PROJECTS-->
-  
-  <!--END OF ABOUT SECTION-->
-  <!--  MENU -->
-
-
-  <!--END OF CONTACT SECTION-->
-  
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer container">
@@ -700,23 +692,20 @@
 
       </form>
       <!-- end of contact form -->
-<!-- padding section -->
-<div id="footer-logo" class="section-pad pad-logo">
-  <figure data-scroll>
-    <a title="shakex sempe: web developer" href="#footer">
-      <img src="img/shakex-logo-min.png" loading="lazy" alt="Shakex Sempe logo">
-    </a>
-  </figure>
-</div>
+      <!-- padding section -->
+      <div id="footer-logo" class="section-pad pad-logo">
+        <figure data-scroll>
+          <a title="shakex sempe: web developer" href="#footer">
+            <img src="img/shakex-logo-min.png" loading="lazy" alt="Shakex Sempe logo">
+          </a>
+        </figure>
+      </div>
       <div data-scroll class="bs21">
         <p>copyright&copy; Shakex Sempe</p>
         <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box shadow</a>
         <span class="date"></span>
       </div>
     </div>
-    <!--back to top button-->
-
-    <!--end of back to top button-->
   </section>
   <!-- END OF FOOTER-->
 </main>
