--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-sempe-logo.png">
 
   <!-- TITLE -->
-  <title>Web Developer - Design & Front-End Development || Portfolio</title>
+  <title>Web Developer - Design & Front-End Web Development || Portfolio</title>
   <!--  -->
   <!-- META DESCRIPTION -->
   <meta name="description"
-    content="Web Design & Developer based in South Africa. Shakex designs and develops responsive homepages, landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
+    content="Web Designer & Developer based in South Africa. Shakex designs and develops responsive homepages, landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
   <!-- META KEYWORDS -->
   <meta name="keywords"
     content="Responsive web design, homepage, landing page, website, copywriting, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote, freelance">
