--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   </div>
   <!-- HEADER -->
   <header id="header">
-      <a class="skip-link" href="#main">skip to main content</a>
+    <!-- SKIP TO MAIN LINK -->
+    <a class="skip-link" href="#main">skip to main content</a>
     <div class="header">
       <nav id="navbar">
         <div class="brand">
@@ -115,10 +116,13 @@
 
             </ul>
             <div class="contact-links">
-              <a title="Email Address" href="mailto:bshakex@gmail.com"><i class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
-              <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i class="fa-brands fa-whatsapp"></i>+27716876941 (Whatsapp)</a>
+              <a title="Email Address" href="mailto:bshakex@gmail.com"><i
+                  class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
+              <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i
+                  class="fa-brands fa-whatsapp"></i>+27716876941 (Whatsapp)</a>
               <a title="Phone number" href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
-              <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
+              <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i
+                  class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
             </div>
           </div>
         </div>
