--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <!--  -->
   <!-- META DESCRIPTION -->
   <meta name="description"
-    content="Web Designer & Developer based in South Africa. Shakex designs and develops responsive homepages, landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
+    content="South Africa based Web Developer creating Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
   <!-- META KEYWORDS -->
   <meta name="keywords"
-    content="Responsive web design, homepage, landing page, website, copywriting, hire, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote, freelance">
+    content="Responsive web design, homepage, landing page, website, offline payments, contact links, copywriting, hire, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote, freelance">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
