--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     content="South Africa based Web Developer. I create Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
   <!-- META KEYWORDS -->
   <meta name="keywords"
-    content="Responsive web design, homepage, landing page, website, offline payments, contact links, copywriting, hire, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote, freelance">
+    content="Responsive web design, user interface, UI, user experience, UX, homepage, landing page, website, offline payments, contact links, copywriting, hire, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote, freelance">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
