--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <!--  -->
   <!-- META DESCRIPTION -->
   <meta name="description"
-    content="South Africa based Web Developer. I create Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
+    content="South Africa based Website Developer. I create Homepages, Landing pages and basic websites for businesses & professionals to showcase their services, projects and products.">
   <!-- META KEYWORDS -->
   <meta name="keywords"
-    content="Responsive web design, user interface, UI, user experience, UX, homepage, landing page, website, offline payments, contact links, copywriting, hire, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote, freelance">
+    content="responsive web design, user interface, UI, user experience, UX, homepage, landing page, website design, website development, seo, google seo, freelance, offline payments, contact links, copywriting, for hire, web hosting, domain registration,  HTML, HTML5, CSS, CSS3, JAVASCRIPT, JS, WEB DEVELOPMENT, SASS, FRONT-END DEVELOPMENT, south africa, react, vanilla javascript,  remote">
   <!-- META AUTHOR -->
   <meta name="author" content="Boitumelo Shakex Sempe">
   <!-- FAVICON -->
