--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header">
     <!-- SKIP TO MAIN LINK -->
@@ -65,7 +65,8 @@
       <nav id="navbar">
         <div class="brand">
           <a href="#home" title="Shakex Sempe" class="scroll-link">
-            <h1>shakex<span>Sempe</span></h1>
+            <p>shakex<span>Sempe</span></p>
+            <!-- <h1>shakexSempe</h1> -->
           </a>
         </div>
         <div class="nav-list">
