--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <a title="Email Address" href="mailto:bshakex@gmail.com"><i
                   class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
               <a title="Whatsapp number" href="https://wa.me/+27716876941" target="_blank"><i
-                  class="fa-brands fa-whatsapp"></i>+27716876941 (Whatsapp)</a>
+                  class="fa-brands fa-whatsapp"></i>0716876941 (Whatsapp)</a>
               <a title="Phone number" href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
               <a title="Location" href="https://goo.gl/maps/iSkbB2vbPQ3n3mhK9" target="_blank"><i
                   class="fa-solid fa-location-dot"></i>Mahikeng, South Africa</a>
