--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       loading
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header">
     <!-- SKIP TO MAIN LINK -->
@@ -66,7 +66,6 @@
         <div class="brand">
           <a href="#home" title="Shakex Sempe" class="scroll-link">
             <p>shakex<span>Sempe</span></p>
-            <!-- <h1>shakexSempe</h1> -->
           </a>
         </div>
         <div class="nav-list">
